#10950: Implement the plugin for the smart.IO Server